@@ -2,7 +2,7 @@
 Copyright (C) 2002-10 Bruce Allen
 Copyright (C) 2004-16 Christian Franke
 
-$Id: smartd.8.in 4281 2016-04-09 12:21:00Z chrfranke $
+$Id: smartd.8.in 4299 2016-04-16 19:45:57Z chrfranke $
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -762,7 +762,11 @@ Alternatively send the info to the smartmontools support mailing list:
 <\fBhttps://lists.sourceforge.net/lists/listinfo/smartmontools-support\fB>.
 
 .SH SEE ALSO
-\fBsmartd.conf\fP(5), \fBsmartctl\fP(8), \fBupdate-smart-drivedb\fP(8).
+\fBsmartd.conf\fP(5), \fBsmartctl\fP(8).
+.\" %IF ENABLE_UPDATE_SMART_DRIVEDB
+.br
+\fBupdate-smart-drivedb\fP(8).
+.\" %ENDIF ENABLE_UPDATE_SMART_DRIVEDB
 
 .SH REFERENCES
 Please see the following web site for more info:
@@ -789,4 +793,4 @@ Links to these and other documents may be found on the Links page of the
 .SH PACKAGE VERSION
 CURRENT_SVN_VERSION CURRENT_SVN_DATE CURRENT_SVN_REV
 .br
-$Id: smartd.8.in 4281 2016-04-09 12:21:00Z chrfranke $
+$Id: smartd.8.in 4299 2016-04-16 19:45:57Z chrfranke $
